# slidebake

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
src/slidebake/: __init__.py  __main__.py  cli.py  config.py  markdown.py  ocr.py  pdf.py  translate.py
tests/: test_cli.py  test_config.py  test_markdown.py  test_ocr.py  test_pdf.py  test_translate.py
